--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,3 +1,43 @@
-<nav class="uk-navbar-container uk-container" uk-navbar>
-    {% include navbar-base.html %}
+<nav class="uk-dark uk-position-z-index uk-navbar-container {% if include.transparent %}uk-navbar-transparent uk-light {% endif %}uk-visible@m" {% if include.transparent %}style="margin-bottom:-212px" {% endif %}uk-navbar>
+    <div class="uk-position-absolute">
+        <a href="{{ '/' | relative_url }}" class="uk-navbar-item uk-logo uk-padding-small"><img style="height:80px"
+                src="assets/images/logo/logo-{% if include.transparent %}white{% else %}web{% endif %}.png"></a>
+    </div>
+    <div class="uk-navbar-right uk-margin-large-right">
+        <ul class="uk-navbar-nav">
+            {% for item in site.data.navigation %}
+            <li>
+                <a href="{% if item.url %}{{ item.url | relative_url }}{% else %}#{% endif %}">{{ item.title }}</a>
+                {% if item.pages|length > 0 %}
+                <div class="uk-navbar-dropdown">
+                    <ul class="uk-nav uk-navbar-dropdown-nav">
+                        {% for child in item.pages %}
+                        <li><a href="{{ child.url | relative_url }}">{{ child.title }}</a></li>
+                        {% endfor %}
+                    </ul>
+                </div>
+                {% endif %}
+            </li>
+            {% endfor %}
+        </ul>
+    </div>
 </nav>
+
+<div style="z-index:2;position:relative" class="uk-background-light uk-hidden@m">
+    <a style="top:18px;left:16px" class="uk-dark uk-position-absolute" uk-icon="icon: menu; ratio: 1.5" uk-toggle="target: #menu-mobile;animation: uk-animation-slide-top"></a>
+    <div class="uk-text-center"><a href="{{ '/' | relative_url }}"><img style="height:60px;padding: 10px 0;" src="assets/images/logo/logo-mobile.png"></a></div>
+    <div id="menu-mobile" class="uk-container uk-dark uk-position-relative" hidden>
+        <ul class="uk-nav-default uk-nav-parent-icon" uk-nav>
+            {% for item in site.data.navigation %}
+            <li class="uk-parent">
+                <a href="{% if item.url %}{{ item.url | relative_url }}{% else %}#{% endif %}">{{ item.title }}</a>
+                <ul class="uk-nav-sub">
+                    {% for child in item.pages %}
+                    <li><a href="{{ child.url | relative_url }}">{{ child.title }}</a></li>
+                    {% endfor %}
+                </ul>
+            </li>
+            {% endfor %}
+        </ul>
+    </div>
+</div>
