--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,4 +8,6 @@ layout: default
     <p class="uk-margin-remove-top uk-text-meta">Posted on {{ page.date | date: "%B %-d, %Y" }}</p>
 
     {{ content }}
+
+    <a class="uk-button uk-button-primary uk-button-large" target="_blank" href="http://www.facebook.com/sharer.php?u={{ site.url }}{{ page.url }}">Share on facebook</a>
 </div>
