--- a/_layouts/simple-title.html
+++ b/_layouts/simple-title.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="uk-container uk-padding">
+<div class="uk-container uk-margin-large-top uk-margin-bottom">
     <h1>{{ page.title }}</h1>
 </div>
 
