--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:600|Open+Sans:300,400&display=swap" rel="stylesheet">
 
     <!-- UIKit css -->
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css?v=0">
     
     <!-- UIKit JS -->
     <script src="/js/uikit.min.js"></script>
