--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,3 +1,4 @@
+<div style="background-color:rgba(255,255,255,.5)">
 <nav class="uk-container uk-dark uk-position-z-index uk-navbar-container {% if include.transparent %}uk-navbar-transparent uk-light {% endif %}uk-visible@m" {% if include.transparent %}style="margin-bottom:-212px" {% endif %}uk-navbar>
     <div class="uk-position-absolute">
         <a href="{{ '/' | relative_url }}" class="uk-navbar-item uk-logo uk-padding-small uk-padding-remove-left"><img style="height:80px"
@@ -7,7 +8,7 @@
         <ul class="uk-navbar-nav">
             {% for item in site.data.navigation %}
             <li>
-                <a href="{% if item.url %}{{ item.url | relative_url }}{% else %}#{% endif %}">{{ item.title }}</a>
+                <a style="font-weight: 500;" href="{% if item.url %}{{ item.url | relative_url }}{% else %}#{% endif %}">{{ item.title }}</a>
                 {% if item.pages|length > 0 %}
                 <div class="uk-navbar-dropdown">
                     <ul class="uk-nav uk-navbar-dropdown-nav">
