--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,12 +2,21 @@
     <div class="uk-container uk-container-medium">
         <div uk-grid>
             <div class="uk-width-1-3@m">
-                <a href="/"><img style="max-height: 96px;" alt="Oak Hill Christian School" src="/assets/images/logo/logo-web.png"></a>
-                <p>13525 Dulles Technology Dr, Herndon, VA  20171 USA</p>
+                <a href="/"><img style="max-height: 96px;" alt="Oak Hill Christian School"
+                        src="/assets/images/logo/logo-web.png"></a>
+                <a href="apply"
+                    class="uk-margin uk-display-inline-block uk-button uk-button-primary">Apply</a>
+                <a href="visit"
+                    class="uk-margin uk-display-inline-block uk-button uk-button-primary">Visit</a>
+                <a href="/#contact"
+                    class="uk-margin uk-display-inline-block uk-button uk-button-primary">Contact</a>
+                <p>13525 Dulles Technology Dr, Herndon, VA 20171 USA</p>
                 <p><a href="mailto:office@oakhillk12.com">office@oakhillk12.com</a></p>
                 <p><a href="tel:(703) 796-6887">(703) 796-6887</a></p>
-                <p><a target="_blank" href="https://www.facebook.com/Oak-Hill-Christian-School-125639267493145/" class="uk-icon-button  uk-margin-small-right" uk-icon="facebook"></a>
-                    <a target="_blank" href="https://www.instagram.com/oakhillk12/?hl=en" class="uk-icon-button" uk-icon="instagram"></a></p>
+                <p><a target="_blank" href="https://www.facebook.com/Oak-Hill-Christian-School-125639267493145/"
+                        class="uk-icon-button  uk-margin-small-right" uk-icon="facebook"></a>
+                    <a target="_blank" href="https://www.instagram.com/oakhillk12/?hl=en" class="uk-icon-button"
+                        uk-icon="instagram"></a></p>
             </div>
             <div class="uk-width-2-3@m uk-child-width-expand@m" uk-grid>
                 {% for item in site.data.navigation %}
