add google analytics

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,23 +1,33 @@
 <head profile="http://www.w3.org/2005/10/profile">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>{% if page.title %}{{ page.title }} | {% endif %} {{ site.title }}</title>
+  <title>{% if page.title %}{{ page.title }} | {% endif %} {{ site.title }}</title>
 
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:600|Open+Sans:300,400&display=swap" rel="stylesheet">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:600|Open+Sans:300,400&display=swap"
+    rel="stylesheet">
 
-    <!-- UIKit css -->
-    <link rel="stylesheet" href="/css/styles.css?v=1">
-    
-    <!-- UIKit JS -->
-    <script src="/js/uikit.min.js"></script>
-    <script src="/js/uikit-icons.min.js"></script>
+  <!-- UIKit css -->
+  <link rel="stylesheet" href="/css/styles.css?v=1">
 
-    <!-- jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  
-    <link rel="icon" 
-      type="image/png" 
-      href="/assets/favicon.png" />
+  <!-- UIKit JS -->
+  <script src="/js/uikit.min.js"></script>
+  <script src="/js/uikit-icons.min.js"></script>
+
+  <!-- jQuery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+  <link rel="icon" type="image/png" href="/assets/favicon.png" />
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-166684731-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-166684731-1');
+  </script>
+
 </head>
