--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,13 +2,13 @@
     <div class="uk-container uk-container-medium">
         <div uk-grid>
             <div class="uk-width-1-3@m">
-                <a href="/"><img style="max-height: 96px;" alt="Oak Hill Christian School"
-                        src="/assets/images/logo/logo-web.png"></a>
-                <a href="apply"
+                <a href="{{ '/' | relative_url }}"><img style="max-height: 96px;" alt="Oak Hill Christian School"
+                        src="{{ '/assets/images/logo/logo-web.png' | relative_url }}"></a>
+                <a href="{{ '/apply' | relative_url }}"
                     class="uk-margin uk-display-inline-block uk-button uk-button-primary">Apply</a>
-                <a href="visit"
+                <a href="{{ '/visit' | relative_url }}"
                     class="uk-margin uk-display-inline-block uk-button uk-button-primary">Visit</a>
-                <a href="/#contact"
+                <a href="{{ '/#contact' | relative_url }}"
                     class="uk-margin uk-display-inline-block uk-button uk-button-primary">Contact</a>
                 <p>13525 Dulles Technology Dr, Herndon, VA 20171 USA</p>
                 <p><a href="mailto:office@oakhillk12.com">office@oakhillk12.com</a></p>
