--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,4 +30,6 @@
     gtag('config', 'UA-166684731-1');
   </script>
 
+  <link rel="shortcut icon" type="image/png" href="{{ 'favicon.png' | relative_url }}">
+
 </head>
