add suite number to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
                     class="uk-margin uk-display-inline-block uk-button uk-button-primary">Visit</a>
                 <a href="{{ '/#contact' | relative_url }}"
                     class="uk-margin uk-display-inline-block uk-button uk-button-primary">Contact</a>
-                <p>13525 Dulles Technology Dr, Herndon, VA 20171 USA</p>
+                <p>13525 Dulles Technology Dr Suite 101, Herndon, VA 20171 USA</p>
                 <p><a href="mailto:office@oakhillk12.com">office@oakhillk12.com</a></p>
                 <p><a href="tel:(703) 796-6887">(703) 796-6887</a></p>
                 <p><a target="_blank" href="https://www.facebook.com/Oak-Hill-Christian-School-125639267493145/"
