add canonical urls and gtm

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,6 @@
 <head profile="http://www.w3.org/2005/10/profile">
   <meta charset="utf-8">
+  <link rel="canonical" href="{{ site.url }}{{ page.url }}" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <title>{% if page.title %}{{ page.title }} | {% endif %} {{ site.title }}</title>
@@ -27,6 +28,14 @@
 
     gtag('config', 'UA-166684731-1');
   </script>
+
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-TNTZXN7');</script>
+  <!-- End Google Tag Manager -->
 
   <link rel="shortcut icon" type="image/png" href="{{ 'favicon.png' | relative_url }}">
 
