--- a/_sass/uikit/variables-theme.scss
+++ b/_sass/uikit/variables-theme.scss
@@ -1,7 +1,7 @@
 $global-margin: 20px !default;
 $accordion-item-margin-top: $global-margin !default;
 $global-medium-font-size: 1.25rem !default;
-$accordion-title-font-size: $global-medium-font-size !default;
+$accordion-title-font-size: $global-font-size !default;
 $accordion-title-line-height: 1.4 !default;
 $global-emphasis-color: #333 !default;
 $accordion-title-color: $global-emphasis-color !default;
@@ -89,7 +89,7 @@ $base-body-line-height: $global-line-height !default;
 $base-body-color: $global-color !default;
 $global-link-color: #1e87f0 !default;
 $base-link-color: $global-link-color !default;
-$base-link-text-decoration: none !default;
+$base-link-text-decoration: underline !default;
 $global-link-hover-color: #0f6ecd !default;
 $base-link-hover-color: $global-link-hover-color !default;
 $base-link-hover-text-decoration: underline !default;
