--- a/_layouts/image-title-full-image.html
+++ b/_layouts/image-title-full-image.html
@@ -5,7 +5,7 @@ layout: transparent-navbar
 <div class="uk-inline uk-width-1-1 uk-overflow-hidden">
   <img class="uk-width-1-1" src="{{ page.image | relative_url }}" alt="">
   <div class="uk-position-center uk-light uk-text-center">
-    <h1 class="uk-heading-large">{% if page.header_title %}{{ page.header_title | markdownify }}{% else %}{{ page.title }}{% endif %}</h1>
+    <h1 class="uk-heading-{% if page.header_size %}{{ page.header_size }}{% else %}large{% endif %}">{% if page.header_title %}{{ page.header_title | markdownify }}{% else %}{{ page.title }}{% endif %}</h1>
     {% if page.subtitle %}<p style="font-size: 2rem;" class="uk-light uk-text-center">{{ page.subtitle }}</p>{% endif %}
   </div>
 </div>
