--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,45 +1,110 @@
-<div style="background-color:rgba(255,255,255,.5)">
-<nav class="uk-container uk-dark uk-position-z-index uk-navbar-container {% if include.transparent %}uk-navbar-transparent uk-light {% endif %}uk-visible@m" {% if include.transparent %}style="margin-bottom:-80px" {% endif %}uk-navbar>
+<div style="background-color: rgba(255, 255, 255, 0.5)">
+  <nav
+    class="uk-container uk-dark uk-position-z-index uk-navbar-container {% if include.transparent %}uk-navbar-transparent uk-light {% endif %}uk-visible@m"
+    {%
+    if
+    include.transparent
+    %}style="margin-bottom:-80px"
+    {%
+    endif
+    %}uk-navbar
+  >
     <div class="uk-position-absolute">
-        <a href="{{ '/' | relative_url }}" class="uk-navbar-item uk-logo uk-padding-small uk-padding-remove-left">
-            <img style="height:80px" alt="Oak Hill Christian School"
-                src="{% if include.transparent %}{{ 'assets/images/logo/logo-white.png' | relative_url }}{% else %}{{ 'assets/images/logo/logo-web.png' | relative_url }}{% endif %}"></a>
+      <a
+        href="{{ '/' | relative_url }}"
+        class="uk-navbar-item uk-logo uk-padding-small uk-padding-remove-left"
+      >
+        <img
+          style="height: 80px"
+          alt="Oak Hill Christian School"
+          src="{% if include.transparent %}{{ 'assets/images/logo/logo-white.png' | relative_url }}{% else %}{{ 'assets/images/logo/logo-web.png' | relative_url }}{% endif %}"
+      /></a>
     </div>
     <div class="uk-navbar-right uk-margin-large-right">
-        <ul class="uk-navbar-nav">
-            {% for item in site.data.navigation %}
-            <li>
-                <a style="font-weight: 500;" href="{% if item.url %}{{ item.url | relative_url }}{% else %}#{% endif %}">{{ item.title }}</a>
-                {% if item.pages|length > 0 %}
-                <div class="uk-navbar-dropdown">
-                    <ul class="uk-nav uk-navbar-dropdown-nav">
-                        {% for child in item.pages %}
-                        <li><a href="{{ child.url | relative_url }}">{{ child.title }}</a></li>
-                        {% endfor %}
-                    </ul>
-                </div>
-                {% endif %}
-            </li>
-            {% endfor %}
-        </ul>
+      <ul class="uk-navbar-nav">
+        {% for item in site.data.navigation %}
+        <li>
+          <a
+            style="font-weight: 500"
+            href="{% if item.url %}{{ item.url | relative_url }}{% else %}#{% endif %}"
+            >{{ item.title }}</a
+          >
+          {% if item.pages|length > 0 %}
+          <div class="uk-navbar-dropdown">
+            <ul class="uk-nav uk-navbar-dropdown-nav">
+              {% for child in item.pages %}
+              <li>
+                <a href="{{ child.url | relative_url }}">{{ child.title }}</a>
+              </li>
+              {% endfor %}
+            </ul>
+          </div>
+          {% endif %}
+        </li>
+        {% endfor %}
+        <li>
+          <div class="uk-flex uk-flex-middle uk-height-1-1">
+            <a
+              target="_blank"
+              href="https://www.facebook.com/Oak-Hill-Christian-School-125639267493145/"
+              class="uk-icon-button uk-margin-small-right"
+              uk-icon="facebook"
+            ></a>
+          </div>
+        </li>
+        <li>
+          <div class="uk-flex uk-flex-middle uk-height-1-1">
+            <a
+              target="_blank"
+              href="https://www.instagram.com/oakhillk12/?hl=en"
+              class="uk-icon-button"
+              uk-icon="instagram"
+            ></a>
+          </div>
+        </li>
+      </ul>
     </div>
-</nav>
+  </nav>
 
-<div style="z-index:2;position:relative" class="uk-background-light uk-hidden@m">
-    <a style="top:18px;left:16px" class="uk-dark uk-position-absolute" uk-icon="icon: menu; ratio: 1.5" uk-toggle="target: #menu-mobile;animation: uk-animation-slide-top"></a>
-    <div class="uk-text-center"><a href="{{ '/' | relative_url }}"><img style="height:60px;padding: 10px 0;" src="{{ 'assets/images/logo/logo-mobile.png' | relative_url }}"></a></div>
-    <div id="menu-mobile" class="uk-container uk-dark uk-position-relative" hidden>
-        <ul class="uk-nav-default uk-nav-parent-icon" uk-nav>
-            {% for item in site.data.navigation %}
-            <li class="uk-parent">
-                <a href="{% if item.url %}{{ item.url | relative_url }}{% else %}#{% endif %}">{{ item.title }}</a>
-                <ul class="uk-nav-sub">
-                    {% for child in item.pages %}
-                    <li><a href="{{ child.url | relative_url }}">{{ child.title }}</a></li>
-                    {% endfor %}
-                </ul>
+  <div
+    style="z-index: 2; position: relative"
+    class="uk-background-light uk-hidden@m"
+  >
+    <a
+      style="top: 18px; left: 16px"
+      class="uk-dark uk-position-absolute"
+      uk-icon="icon: menu; ratio: 1.5"
+      uk-toggle="target: #menu-mobile;animation: uk-animation-slide-top"
+    ></a>
+    <div class="uk-text-center">
+      <a href="{{ '/' | relative_url }}"
+        ><img
+          style="height: 60px; padding: 10px 0"
+          src="{{ 'assets/images/logo/logo-mobile.png' | relative_url }}"
+      /></a>
+    </div>
+    <div
+      id="menu-mobile"
+      class="uk-container uk-dark uk-position-relative"
+      hidden
+    >
+      <ul class="uk-nav-default uk-nav-parent-icon" uk-nav>
+        {% for item in site.data.navigation %}
+        <li class="uk-parent">
+          <a
+            href="{% if item.url %}{{ item.url | relative_url }}{% else %}#{% endif %}"
+            >{{ item.title }}</a
+          >
+          <ul class="uk-nav-sub">
+            {% for child in item.pages %}
+            <li>
+              <a href="{{ child.url | relative_url }}">{{ child.title }}</a>
             </li>
             {% endfor %}
-        </ul>
+          </ul>
+        </li>
+        {% endfor %}
+      </ul>
     </div>
+  </div>
 </div>
