Add social links to mobile navigation

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -104,6 +104,22 @@
           </ul>
         </li>
         {% endfor %}
+        <li class="uk-margin-bottom uk-margin-top">
+          <div class="uk-flex uk-flex-middle uk-height-1-1">
+            <a
+              target="_blank"
+              href="https://www.facebook.com/Oak-Hill-Christian-School-125639267493145/"
+              class="uk-icon-button uk-margin-small-right"
+              uk-icon="facebook"
+            ></a>
+            <a
+              target="_blank"
+              href="https://www.instagram.com/oakhillk12/?hl=en"
+              class="uk-icon-button"
+              uk-icon="instagram"
+            ></a>
+          </div>
+        </li>
       </ul>
     </div>
   </div>
