Update colors and logos

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,20 +1,24 @@
 <head profile="http://www.w3.org/2005/10/profile">
-  <meta charset="utf-8">
+  <meta charset="utf-8" />
   <link rel="canonical" href="{{ site.url }}{{ page.url }}" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  {% if page.extrahead %}
-    {% for line in page.extrahead %}
-      {{ line }}
-    {% endfor %}
-  {% endif %}
-  <title>{% if page.title %}{{ page.title }} | {% endif %} {{ site.title }}</title>
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1, shrink-to-fit=no"
+  />
+  {% if page.extrahead %} {% for line in page.extrahead %} {{ line }} {% endfor
+  %} {% endif %}
+  <title>
+    {% if page.title %}{{ page.title }} | {% endif %} {{ site.title }}
+  </title>
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:600|Open+Sans:300,400&display=swap"
-    rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:600|Open+Sans:300,400&display=swap"
+    rel="stylesheet"
+  />
 
   <!-- UIKit css -->
-  <link rel="stylesheet" href="/css/styles.css?v=3">
+  <link rel="stylesheet" href="/css/styles.css?v=4" />
 
   <!-- UIKit JS -->
   <script src="/js/uikit.min.js"></script>
@@ -24,23 +28,38 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-166684731-1"></script>
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=UA-166684731-1"
+  ></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
 
-    gtag('config', 'UA-166684731-1');
+    gtag("config", "UA-166684731-1");
   </script>
 
   <!-- Google Tag Manager -->
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-TNTZXN7');</script>
+  <script>
+    (function (w, d, s, l, i) {
+      w[l] = w[l] || [];
+      w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+      var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s),
+        dl = l != "dataLayer" ? "&l=" + l : "";
+      j.async = true;
+      j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+      f.parentNode.insertBefore(j, f);
+    })(window, document, "script", "dataLayer", "GTM-TNTZXN7");
+  </script>
   <!-- End Google Tag Manager -->
 
-  <link rel="shortcut icon" type="image/png" href="{{ 'favicon.png' | relative_url }}">
-
+  <link
+    rel="shortcut icon"
+    type="image/png"
+    href="{{ 'favicon.png' | relative_url }}"
+  />
 </head>
