--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -17,7 +17,7 @@
         <img
           style="height: 80px"
           alt="Oak Hill Christian School"
-          src="{% if include.transparent %}{{ 'assets/images/logo/logo-white.png' | relative_url }}{% else %}{{ 'assets/images/logo/logo-web.png' | relative_url }}{% endif %}"
+          src="{{ 'assets/images/logo/ohcs-logo.svg' | relative_url }}"
       /></a>
     </div>
     <div class="uk-navbar-right uk-margin-large-right">
@@ -80,7 +80,7 @@
       <a href="{{ '/' | relative_url }}"
         ><img
           style="height: 60px; padding: 10px 0"
-          src="{{ 'assets/images/logo/logo-mobile.png' | relative_url }}"
+          src="{{ 'assets/images/logo/ohcs-logo-mobile.svg' | relative_url }}"
       /></a>
     </div>
     <div
