--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -4,10 +4,7 @@
   style="position: sticky; top: 0; z-index: 1000"
 >
   <a class="uk-alert-close" uk-close></a>
-  <p>
-    🚧 Our website is under construction, please excuse any outdated information
-    or formatting issues! 🚧
-  </p>
+  <p>🚧 Our website is under construction. Come back soon for even more! 🚧</p>
 </div>
 <div style="background-color: rgba(255, 255, 255, 0.5)">
   <nav
